[package]
name = "rlua-async-example"
version = "0.1.0"
authors = ["Artur Hallmann <a.hallmann@neusta.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
rlua = "0.17.0"
rlua-async = "0.4.0"
